Update 1001_Widget_List.ipynb colab download head

--- a/Markdown/1001_Widget_List.ipynb
+++ b/Markdown/1001_Widget_List.ipynb
@@ -33,6 +33,8 @@
       "outputs": [],
       "source": [
         "# Imports for JupyterLite\n",
+        "!git clone https://github.com/SchenbergZY/Tabelle-Fallstudie-2-folk.git",
+        "%cd Tabelle-Fallstudie-2-folk",
         "%pip install -q ipywidgets"
       ]
     },
