--- a/Markdown/1000_Widget List.ipynb
+++ b/Markdown/1000_Widget List.ipynb
@@ -34,7 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ipywidgets as widgets"
+    "import ipywidgets as widgets",
+    "print(widgets.__version___)"
    ]
   },
   {
