--- a/Markdown/1001_Widget_List.ipynb
+++ b/Markdown/1001_Widget_List.ipynb
@@ -46,7 +46,7 @@
       },
       "outputs": [],
       "source": [
-        "import ipywidgets as widgets"
+        "import ipywidgets as widgets;print(widgets.__version___)"
       ]
     },
     {
