Update 1001_Widget_List.ipynb test numpy scipy

--- a/Markdown/1001_Widget_List.ipynb
+++ b/Markdown/1001_Widget_List.ipynb
@@ -46,7 +46,7 @@
       },
       "outputs": [],
       "source": [
-        "import sys;print('Python %s on %s' % (sys.version, sys.platform));import ipywidgets as widgets;print(widgets.__version___)"
+        "import numpy;import scipy;import sys;print('Python %s on %s' % (sys.version, sys.platform));import ipywidgets as widgets;print(widgets.__version___)"
       ]
     },
     {
