--- a/Markdown/1003_test.md
+++ b/Markdown/1003_test.md
@@ -92,7 +92,8 @@ document.addEventListener('DOMContentLoaded', () => {
       });
   });
 });
-</script>```
+</script>
+```
 
 ```{raw} html
 <!-- ░░░  3-slot ordering exercise  ░░░ -->
