Update 1003_test.md add back raw function

--- a/Markdown/1003_test.md
+++ b/Markdown/1003_test.md
@@ -34,6 +34,84 @@ Viel Erfolg!
 
 ```{raw} html
 <script>
+function setupAllDND(){                       // call exactly once, after page loads
+
+  document.querySelectorAll('.dnd-exercise').forEach(ex=>{
+
+      const choices=ex.querySelector('.choices');
+
+      const target =ex.querySelector('.target');
+
+      const answer=ex.dataset.answer.split(',');
+
+      const ordered=(ex.dataset.order==='true');
+
+      let drag=null;
+
+
+
+      ex.querySelectorAll('.dnd-item').forEach(el=>
+
+        el.addEventListener('dragstart',()=>drag=el)
+
+      );
+
+
+
+      [choices,target].forEach(box=>{
+
+        box.addEventListener('dragover',e=>{e.preventDefault();box.classList.add('dragover')});
+
+        box.addEventListener('dragleave',()=>box.classList.remove('dragover'));
+
+        box.addEventListener('drop',e=>{
+
+            e.preventDefault();box.classList.remove('dragover');box.appendChild(drag);
+
+        });
+
+      });
+
+
+
+      ex.querySelector('.check').addEventListener('click',()=>{
+
+        const picked=[...target.querySelectorAll('.dnd-item')].map(x=>x.dataset.key);
+
+        const ok= ordered
+
+                ? picked.join()===answer.join()
+
+                : picked.sort().join()===answer.slice().sort().join();
+
+        if(ok){alert('✅ Correct!');target.classList.add('ok');}
+
+        else  {alert('❌ Try again');
+            target.classList.remove('ok');
+            /* NEW: send everything back to the choices box */
+            target.querySelectorAll('.dnd-item')
+                  .forEach(el => choices.appendChild(el));
+        }
+
+      });
+
+
+
+      ex.querySelector('.reset').addEventListener('click',()=>{
+
+        target.querySelectorAll('.dnd-item').forEach(el=>choices.appendChild(el));
+
+        target.classList.remove('ok');
+
+      });
+
+  });
+
+}
+
+/* Wait until the DOM is fully parsed */
+document.addEventListener('DOMContentLoaded',setupAllDND);
+
 /* add this *once* if your page still uses the old setupAllDND() -------- */
 document.addEventListener('DOMContentLoaded', () => {
 
