Update 1003_test.md test long texts

--- a/Markdown/1003_test.md
+++ b/Markdown/1003_test.md
@@ -56,9 +56,9 @@ Viel Erfolg!
 
   <!-- Choices strip -->
   <div class="dnd-box choices">
-    <span class="dnd-item" draggable="true" data-key="3">3</span>
-    <span class="dnd-item" draggable="true" data-key="2">2</span>
-    <span class="dnd-item" draggable="true" data-key="4">4</span>
+    <span class="dnd-item" draggable="true" data-key="3">3 long three long three long three long three long three long three</span>
+    <span class="dnd-item" draggable="true" data-key="2">2 long two long two long two long two long two long two long two</span>
+    <span class="dnd-item" draggable="true" data-key="4">4 long four long four long four long four long four long four</span>
   </div>
 
   <!-- Three dedicated slots (one card each) -->
