Update 1003_test.md sum up

--- a/Markdown/1003_test.md
+++ b/Markdown/1003_test.md
@@ -33,104 +33,148 @@ Viel Erfolg!
 # Aufgabe 0 multiple boxes
 
 ```{raw} html
-<!-- ░░░  STYLE – only for THIS page  ░░░ -->
+<!-- ░░░  SHARED CSS  ░░░ -->
 <style>
-.dnd-ex{display:flex;flex-direction:column;gap:1.3rem;margin-bottom:2rem}
-.dnd-item{background:#eef2ff;border:1px solid #4f46e5;border-radius:.6rem;
-          padding:.4rem .8rem;margin:.25rem;font-weight:500;cursor:move;
-          box-shadow:0 1px 2px rgb(0 0 0 / .06);transition:transform .15s,box-shadow .15s}
+.dnd-ex      {display:flex;flex-direction:column;gap:1.3rem;margin-bottom:2.2rem}
+.dnd-item    {background:#eef2ff;border:1px solid #4f46e5;border-radius:.6rem;
+              padding:.4rem .8rem;margin:.25rem;font-weight:500;cursor:move;
+              box-shadow:0 1px 2px rgb(0 0 0 / .06);transition:transform .15s,box-shadow .15s}
 .dnd-item:active{transform:scale(.92);box-shadow:0 4px 6px rgb(0 0 0 / .15)}
-.dnd-box {min-height:3rem;min-width:8rem;padding:.55rem .7rem;border:2px dashed #9ca3af;
-          border-radius:.8rem;display:flex;flex-wrap:wrap;gap:.4rem;align-items:center;
-          transition:border-color .2s,background .2s}
+.dnd-box     {min-height:3rem;min-width:8rem;padding:.55rem .7rem;border:2px dashed #9ca3af;
+              border-radius:.8rem;display:flex;flex-wrap:wrap;gap:.4rem;align-items:center;
+              transition:border-color .2s,background .2s}
 .dnd-box.dragover{background:#fefce8;border-color:#4f46e5}
 .dnd-box.ok      {background:#f0fdf4;border-color:#16a34a}
-.dnd-btn{background:#4f46e5;color:#fff;border:0;border-radius:.55rem;
-         padding:.45rem 1.2rem;margin-right:.7rem;font-weight:500;cursor:pointer;
-         transition:background .2s}
-.dnd-btn:hover{background:#4338ca}
+.dnd-btn     {background:#4f46e5;color:#fff;border:0;border-radius:.55rem;
+              padding:.45rem 1.2rem;margin-right:.7rem;font-weight:500;cursor:pointer;
+              transition:background .2s}
+.dnd-btn:hover   {background:#4338ca}
+.arrow       {font-size:1.6rem;color:#9ca3af;user-select:none;margin:0 .4rem}
 </style>
 
-<!-- ░░░  ONE-CARD-PER-SLOT ORDERING TASK  ░░░ -->
-<div class="dnd-ex" data-ans="2,4,3">
+<!-- ─────────────  EXAMPLE 1 — “Choose the primes”  ───────────── -->
+<div class="dnd-ex" data-answer="2,5" data-order="false">
+  <p><strong>Task A – choose all prime numbers</strong></p>
 
-  <!-- Choices strip -->
-  <div class="dnd-box choices">
-    <span class="dnd-item" draggable="true" data-key="3">3 long three long three long three long three long three long three</span>
-    <span class="dnd-item" draggable="true" data-key="2">2 long two long two long two long two long two long two long two</span>
-    <span class="dnd-item" draggable="true" data-key="4">4 long four long four long four long four long four long four</span>
+  <div class="dnd-box choices vertical">
+    <span class="dnd-item" draggable="true" data-key="2">2</span>
+    <span class="dnd-item" draggable="true" data-key="9">9</span>
+    <span class="dnd-item" draggable="true" data-key="4">4</span>
+    <span class="dnd-item" draggable="true" data-key="5">5</span>
   </div>
 
-  <!-- Three dedicated slots (one card each) -->
-  <div style="display:flex;gap:1rem">
-    <div class="dnd-box slot" data-pos="0"></div>
-    <div class="dnd-box slot" data-pos="1"></div>
-    <div class="dnd-box slot" data-pos="2"></div>
-  </div>
+  <div class="dnd-box target"></div>
 
-  <!-- Buttons -->
   <div>
     <button class="dnd-btn check">Check</button>
     <button class="dnd-btn reset">Reset</button>
   </div>
 </div>
 
-<!-- ░░░  SCRIPT  ░░░ -->
+<!-- ─────────────  EXAMPLE 2 — “Order 2 → 4 → 3”  ───────────── -->
+<div class="dnd-ex" data-answer="2,4,3" data-order="true">
+  <p><strong>Task B – arrange the numbers in order 2 → 4 → 3</strong></p>
+
+  <div class="dnd-box choices">
+    <span class="dnd-item" draggable="true" data-key="3">3</span>
+    <span class="dnd-item" draggable="true" data-key="2">2</span>
+    <span class="dnd-item" draggable="true" data-key="4">4</span>
+  </div>
+
+  <!-- leave this empty; script will inject slots + arrows -->
+  <div class="slots"></div>
+
+  <div>
+    <button class="dnd-btn check">Check</button>
+    <button class="dnd-btn reset">Reset</button>
+  </div>
+</div>
+
+<!-- ░░░  UNIVERSAL JS  ░░░ -->
 <script>
 document.addEventListener('DOMContentLoaded', () => {
 
-  const ex       = document.querySelector('.dnd-ex');
-  const choices  = ex.querySelector('.choices');
-  const slots    = ex.querySelectorAll('.slot');
-  const answer   = ex.dataset.ans.split(',');   // ["2","4","3"]
-  let   dragging = null;
+  /* ═════════  INITIALISE EVERY .dnd-ex  ═════════ */
+  document.querySelectorAll('.dnd-ex').forEach(ex=>{
+      const ordered   = ex.dataset.order === 'true';
+      const answerArr = ex.dataset.answer.split(',');            // ["2","5"] or ["2","4","3"]
+      const choices   = ex.querySelector('.choices');
+      const resetBtn  = ex.querySelector('.reset');
+      const checkBtn  = ex.querySelector('.check');
+      let dragging = null;
 
-  /* make every card draggable */
-  ex.querySelectorAll('.dnd-item').forEach(card =>
-    card.addEventListener('dragstart', () => dragging = card)
-  );
+      /* ── build slots w/ arrows for ordering tasks ── */
+      let targets;
+      if (ordered){
+        const slotsWrap = ex.querySelector('.slots');
+        for (let i=0;i<answerArr.length;i++){
+          const slot=document.createElement('div');
+          slot.className='dnd-box slot'; slot.dataset.pos=i;
+          slotsWrap.appendChild(slot);
+          if (i<answerArr.length-1){
+            const arrow=document.createElement('span');
+            arrow.className='arrow'; arrow.innerHTML='&rarr;';
+            slotsWrap.appendChild(arrow);
+          }
+        }
+        targets = ex.querySelectorAll('.slot');
+      }else{
+        targets = [ ex.querySelector('.target') ];               // single target box
+      }
 
-  /* choices box – unlimited drops */
-  makeDroppable(choices, false);
+      /* ── make cards draggable ── */
+      ex.querySelectorAll('.dnd-item').forEach(card=>{
+         card.addEventListener('dragstart', () => dragging = card);
+      });
 
-  /* each slot – accept only one card */
-  slots.forEach(slot => makeDroppable(slot, true));
+      /* ── choices box (unlimited drops) ── */
+      makeDroppable(choices,false);
 
-  /* reusable drop helper */
-  function makeDroppable(box, single){
-    box.addEventListener('dragover',  e => {
-      if (!single || box.children.length === 0){ e.preventDefault(); box.classList.add('dragover'); }
-    });
-    box.addEventListener('dragleave', () => box.classList.remove('dragover'));
-    box.addEventListener('drop',      e => {
-      e.preventDefault(); box.classList.remove('dragover');
-      if (!single || box.children.length === 0) box.appendChild(dragging);
-    });
-  }
+      /* ── every target box ── */
+      targets.forEach(t => makeDroppable(t, ordered));           // single-card if ordered task
 
-  /* CHECK button */
-  ex.querySelector('.check').addEventListener('click', () => {
-    const picked = Array.from(slots).map(s => s.firstElementChild?.dataset.key || '');
-    const correct = picked.join() === answer.join();
+      function makeDroppable(box, single){
+        box.addEventListener('dragover',e=>{
+           if (!single || box.children.length===0){ e.preventDefault(); box.classList.add('dragover'); }
+        });
+        box.addEventListener('dragleave',()=>box.classList.remove('dragover'));
+        box.addEventListener('drop',e=>{
+           e.preventDefault(); box.classList.remove('dragover');
+           if (!single || box.children.length===0) box.appendChild(dragging);
+        });
+      }
 
-    if (correct){
-      alert('✅ Correct!');
-      slots.forEach(s => s.classList.add('ok'));
-    } else {
-      alert('❌ Not correct.');
-      resetCards();                       // auto-reset on wrong attempt
-    }
+      /* ── RESET ── */
+      resetBtn.addEventListener('click', reset);
+
+      function reset(){
+        targets.forEach(t=>{
+          while(t.firstChild) choices.appendChild(t.firstChild);
+          t.classList.remove('ok');
+        });
+      }
+
+      /* ── CHECK ── */
+      checkBtn.addEventListener('click', ()=>{
+        let ok;
+        if (ordered){
+          const picked=[...targets].map(t=>t.firstElementChild?.dataset.key||'');
+          ok = picked.join() === answerArr.join();
+        }else{
+          const picked=[...targets[0].querySelectorAll('.dnd-item')].map(x=>x.dataset.key).sort();
+          ok = picked.length===answerArr.length &&
+               picked.join() === answerArr.slice().sort().join();
+        }
+
+        if (ok){
+          alert('✅ Correct!');
+          targets.forEach(t=>t.classList.add('ok'));
+        }else{
+          alert('❌ Not correct.');
+          reset();                                              // auto-reset on wrong attempt
+        }
+      });
   });
-
-  /* RESET button */
-  ex.querySelector('.reset').addEventListener('click', resetCards);
-
-  function resetCards(){
-    slots.forEach(s => {
-      if (s.firstElementChild) choices.appendChild(s.firstElementChild);
-      s.classList.remove('ok');
-    });
-  }
 });
 </script>
 ```
